Fixed footer height that caused a scrollbar to be displayed on some browsers

--- a/css/_common.less
+++ b/css/_common.less
@@ -55,7 +55,7 @@ html {
 }
 
 @page-header-size: 85px;
-@page-footer-size: 23px;
+@page-footer-size: 24px;
 
 .vertical-fill-page(@extra-bottom-space: 0px) {
     position: absolute;
